--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,3 @@
-*{
-    padding: 10px; margin: auto;
+body {
+    position: absolute;
 }
-
-body{
-    background: #f5f5f5 top-repeat-x; font: 12px arial; color: #555; line-height: 1.1em;
-}
-
-header {
-    width: 800px; margin: auto; font-weight: bold;
-}
-
-img {
-    width: 500px; margin: auto;
-}
-
-header nav ul{
-    list-style: none; overflow: hidden; 
-    border-bottom: 3px solid #f4f4f4;
-    border-left: 1px solid #f3f3f3;
-    border-top: 1px solid #f3f3f3;
-    border-right: 1px solid #f3f3f3;
-    
-}
-
-header nav ul li{
-    float: left; padding: 8px 25px; border-left: 1px solid #f4f4f4;
-}
-
-header nav ul li:first-child{
-    border-left: 1px;
-}
-
-header nav ul li a{
-    color: #46576b; font-size: 14px; text-decoration: none; 
-}
-
