--- a/css/pro-mene.css
+++ b/css/pro-mene.css
@@ -1,18 +1,40 @@
-section {
+main {
+    box-shadow: 0 0 10px;
+    margin-top: 40px;
     display: block;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
+    border-radius: 15px;
 }
 
-section p {
+main:hover {
+    box-shadow: 0 0 15px;
+    border-radius: 15px;
+    -webkit-transform: scale(1.01, 1.01);
+    
+}  
+
+main article {
+    text-align: center;
+    size: 1.3em;
+    margin: 60px 0 0 0;
+    padding-top: 20px;
+}
+
+main section p {
     text-align: justify;
-    margin: 50px 0 0 0;
+    margin: 20px 0 0 0;
+    border: 5px;
+    border-color: #d6d7d9;
+    padding: 18px 18px 18px 18px;
+    
 }
 
-section p img {
+main section p img {
     width: 180px;
     float: right;
     margin: 10px 10px 30px 30px;
+    border-radius: 10px;
+    /*box-shadow: 0 0 20px 1px red;*/
 }
