--- a/css/pro-mene.css
+++ b/css/pro-mene.css
@@ -6,13 +6,15 @@ main {
     margin-left: auto;
     margin-right: auto;
     border-radius: 15px;
+    transform: scale(1, 1);
+    transition-duration: 1s;
 }
 
 main:hover {
     box-shadow: 0 0 15px;
     border-radius: 15px;
-    -webkit-transform: scale(1.01, 1.01);
-    
+    -webkit-transform: scale(1.2, 1.2);
+    -webkit-transition-duration: 1s;
 }  
 
 main article {
@@ -32,7 +34,7 @@ main section p {
 }
 
 main section p img {
-    width: 180px;
+    width: 190px;
     float: right;
     margin: 10px 10px 30px 30px;
     border-radius: 10px;
