--- a/css/pro-mene.css
+++ b/css/pro-mene.css
@@ -1,30 +1,24 @@
 main {
     box-shadow: 0 0 10px;
-    margin-top: 40px;
+    margin-top: 15px;
     display: block;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 15px;
+    border-radius: 11px;
     transform: scale(1, 1);
     transition-duration: 1s;
 }
 
 main:hover {
-    box-shadow: 0 0 15px;
-    border-radius: 15px;
-    -webkit-transform: scale(1.2, 1.2);
-    -webkit-transition-duration: 1s;
-    -o-transform: scale(1.2, 1.2);
-    -o-transition-duration: 1s;
-    -ms-transform: scale(1.2, 1.2);
-    -ms-transition-duration: 1s;
+    box-shadow: 0 0 15px grey;
+    border-radius: 11px;
 }  
 
 main article {
     text-align: center;
     size: 1.3em;
-    margin: 60px 0 0 0;
+    margin: 30px 0 0 0;
     padding-top: 20px;
 }
 
@@ -35,6 +29,7 @@ main section p {
     border-color: #d6d7d9;
     padding: 18px 18px 18px 18px;
     
+    
 }
 
 main section p img {
@@ -42,4 +37,5 @@ main section p img {
     float: right;
     margin: 10px 10px 30px 30px;
     border-radius: 10px;
+    box-shadow: 0 0 5px;
 }
