--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,14 @@ header a img {
     
 }
 
-.verh {
+.up {
     border: 0;
     height: 2px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin: 10px 0 2px 0;
 }
 
-.nyz {
+.down {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
@@ -39,6 +39,17 @@ header a img {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin: 0px 0 2px 0;
 }
+
+.back {
+    text-decoration: none;
+    color: #293646;
+}
+
+.top {
+    text-decoration: none;
+    color: #293646;
+}
+
 
 nav {
     text-align: center;
@@ -76,3 +87,4 @@ footer p {
     text-align: center;
     
 }
+
